Fix card spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,9 @@ body {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
 }
-.cards {
-  padding: 20px;
-}
 .card {
   padding: 0;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   border: none;
   border-radius: 0.25rem;
 }
